# array-exceptions

./: .stylish-haskell.yaml  README.md  array-exceptions.cabal  cabal.project  default.nix  hie.yaml  release.nix  shell.nix
example/: Main.hs  example.cabal
nix/: pkgs.nix
nix/exts/: array-exceptions.nix  example.nix
src/Control/Exception/: Array.hs  ElementError.hs  RangeError.hs
